--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
 		"nixilla/php-jwt": "~0.1",
 		"nesbot/Carbon": "1.13.*"
 	},
+	"require-dev": {
+		"phpunit/phpunit": "~4.3"
+	},
 	"autoload": {
 		"psr-4": {
 			"WeAreArchitect\\SharePoint\\": "src/"
