--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 	"require": {
 		"php": ">=5.4.0",
 		"guzzlehttp/guzzle": "5.0.*",
-		"nixilla/php-jwt": "~0.1",
+		"firebase/php-jwt": "1.*",
 		"nesbot/Carbon": "1.13.*"
 	},
 	"require-dev": {
@@ -25,6 +25,5 @@
 		"psr-4": {
 			"WeAreArchitect\\SharePoint\\": "src/"
 		}
-	},
-	"minimum-stability": "stable"
+	}
 }
