--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 		"php": ">=5.4.0",
 		"guzzlehttp/guzzle": "5.0.*",
 		"firebase/php-jwt": "1.*",
-		"nesbot/Carbon": "1.13.*"
+		"nesbot/carbon": "~1.13"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.3"
