--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
 	],
 	"require": {
 		"php": ">=5.4.0",
-		"guzzlehttp/guzzle": "5.0.*",
+		"guzzlehttp/guzzle": "~5.0",
 		"firebase/php-jwt": "1.*",
-		"nesbot/carbon": "~1.14"
+		"nesbot/carbon": "~1.0"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "~4.3"
+		"phpunit/phpunit": "~4.0"
 	},
 	"autoload": {
 		"psr-4": {
