--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
     - 5.4
     - 5.5
     - 5.6
+    - 7.0
     - hhvm
 
 before_install:
@@ -19,4 +20,5 @@ matrix:
     fast_finish: true
 
     allow_failures:
+        - php: 7.0
         - php: hhvm
